--- a/.github/workflows/newman.yml
+++ b/.github/workflows/newman.yml
@@ -25,4 +25,4 @@ jobs:
       run: npm install -g newman newman-reporter-htmlextra
 
     - name: Run collection with htmlextra reporter
-      run: newman run ./postman/postman_collection.json -r htmlextra
+      run: newman run ./postman/postman_collection.json
