Actualización del README y otros archivos, Subida de Archivo postman

--- a/.github/workflows/newman.yml
+++ b/.github/workflows/newman.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm start &
 
     - name: Run collection with htmlextra reporter
-      run: newman run ./postman/postman_collection.json -r htmlextra --reporter-htmlextra-export newman-report.html
+      run: newman run ./RESTFUL_BOOKER_AUTOMATE.postman_collection.json -r htmlextra --reporter-htmlextra-export newman-report.html
       
     - name: Upload HTML report as artifact
       uses: actions/upload-artifact@v3
