--- a/.github/workflows/newman.yml
+++ b/.github/workflows/newman.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Start the project
       run: npm start &
 
+    - name: List files in project directory  # NEW Step to ensure paths are correct
+      run: ls -R
+      
     - name: Run collection with htmlextra reporter
       run: newman run ./postman/RESTFUL_BOOKER_AUTOMATE.postman_collection.json -r htmlextra --reporter-htmlextra-export newman-report.html
       
