--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -103,10 +103,11 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: codeql-sarif-${{ matrix.language }}
-        path: ./**/results/*.sarif
+        path: codeql-results/*.sarif
     - name: Convert SARIF to HTML
       run: |
-        pip install sarif-tools
+        pip install --user sarif-tools
+        export PATH="$PATH:$HOME/.local/bin"
         for file in codeql-results/*.sarif; do
           sarif-tools html "$file" -o "${file%.sarif}.html"
         done
