--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,15 +29,9 @@ jobs:
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
-      # required for all workflows
-      security-events: write
-
-      # required to fetch internal or private CodeQL packs
-      packages: read
-
-      # only required for workflows in private repositories
-      actions: read
       contents: read
+      security-events: read
+      actions: read
 
     strategy:
       fail-fast: false
@@ -104,3 +98,20 @@ jobs:
       with:
         name: codeql-sarif-${{ matrix.language }}
         path: codeql-results/*.sarif
+    - name: Generate CodeQL and Dependabot Report
+      uses: advanced-security/codeql-and-dependabot-report-action@v2
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        output_format: html
+        output_file: security-report.html
+    - name: Generate Security Report
+      uses: rsdmike/github-security-report-action@v3.0.4
+      with:
+        template: report
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload Security Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.language }}-security-report
+        path: ./report.pdf
