--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,13 +11,19 @@
 #
 name: "CodeQL Advanced"
 
+permissions: 
+  security-events: write
+  
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
+    tags:
+      - '**'
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '36 7 * * 6'
+    - cron: '05 19 * * 2'
 
 jobs:
   analyze:
@@ -29,9 +35,15 @@ jobs:
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
-      contents: read
-      security-events: read
+      # required for all workflows
+      security-events: write
+
+      # required to fetch internal or private CodeQL packs
+      packages: read
+
+      # only required for workflows in private repositories
       actions: read
+      contents: read
 
     strategy:
       fail-fast: false
@@ -39,14 +51,26 @@ jobs:
         include:
         - language: actions
           build-mode: none
+        # - language: c-cpp
+        #   build-mode: autobuild
+        # - language: csharp
+        #   build-mode: none
+        - language: go
+          build-mode: autobuild
+        # - language: java-kotlin
+        #   build-mode: none # This mode only analyzes Java. Set this to 'autobuild' or 'manual' to analyze Kotlin too.
         - language: javascript-typescript
           build-mode: none
-        # CodeQL supports the following values keywords for 'language': 'actions', 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'rust', 'swift'
+        - language: python
+          build-mode: none
+        # - language: ruby
+        #   build-mode: none
+        # CodeQL supports the following values keywords for 'language': 'actions', 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
         # Use 'javascript-typescript' to analyze code written in JavaScript, TypeScript or both
         # To learn more about changing the languages that are analyzed or customizing the build mode for your analysis,
-        # see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning.customizing-your-advanced-setup-for-code-scanning.
+        # see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/customizing-your-advanced-setup-for-code-scanning.
         # If you are analyzing a compiled language, you can modify the 'build-mode' for that language to customize how
         # your codebase is analyzed, see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/codeql-code-scanning-for-compiled-languages
     steps:
@@ -92,26 +116,16 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
-        output: codeql-results/${{ matrix.language }}.sarif
-    - name: Upload SARIF results
-      uses: actions/upload-artifact@v4
-      with:
-        name: codeql-sarif-${{ matrix.language }}
-        path: codeql-results/*.sarif
-    - name: Generate CodeQL and Dependabot Report
-      uses: advanced-security/codeql-and-dependabot-report-action@v2
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        output_format: html
-        output_file: security-report.html
+    
     - name: Generate Security Report
       uses: rsdmike/github-security-report-action@v3.0.4
       with:
         template: report
         token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload Security Report
+    
+    - name: GitHub Upload Release Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.language }}-security-report
-        path: ./report.pdf
+        name: ${{ matrix.language }}-report
+        path: |
+         ./report.pdf
